--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ body {
 
 .site-header {
   padding-top: 5%;
-  height: 100vh;
+  height: 20vh;
 }
 
 .main-title {
@@ -33,12 +33,17 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: 'Brandon Grotesque','brandon-grotesque',Helvetica,sans-serif;
+
+
 }
 
 .site-navigation li {
   display: inline-block;
-  border: 1px solid;
+  border: 1px;
   padding: 0.5em;
   margin: 0 5%;
-  box-shadow: 5px 3px rgba(0, 0, 0, 0.5);
+  /*  box-shadow: 5px 3px rgba(0, 0, 0, 0.5);  */
 }
