--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-
+@import url('https://fonts.googleapis.com/css?family=Poiret+One');
 
 html{
   font-size: 0.625em;
@@ -13,6 +13,28 @@ body, body * {
 
 body {
   font-size: 1.6rem;
+  font-family: 'Poiret One', cursive;
+  background-image: url('../images/john.jpg');
+  background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	color: #fff;
+}
+
+.Welcome{
+  width: 50vw;
+  padding: 0 50px 0 100px;
+  border-right: 0;
+  line-height: 28px;
+  float: left;
+}
+
+.aside{
+  width: 50vw;
+  padding: 0 100px 0 50px;
+  border-right: 0;
+  line-height: 28px;
+  float: left;
 }
 
 .wrapper {
@@ -25,9 +47,9 @@ body {
   height: 20vh;
 }
 
-.main-title {
+/* .main-title {
   font-size: 3rem;
-}
+} */
 
 .site-navigation ul {
   margin: 0;
@@ -35,9 +57,6 @@ body {
   list-style-type: none;
   text-transform: uppercase;
   font-size: 14px;
-  font-family: 'Brandon Grotesque','brandon-grotesque',Helvetica,sans-serif;
-
-
 }
 
 .site-navigation li {
@@ -47,3 +66,31 @@ body {
   margin: 0 5%;
   /*  box-shadow: 5px 3px rgba(0, 0, 0, 0.5);  */
 }
+
+.site-navigation a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.aside-navigation a{
+  color: #fff;
+}
+
+footer{
+  background: #1e0000;
+  border: solid #1e0000;
+  margin-top: 60%;
+  margin-bottom: 0;
+
+}
+
+footer li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 0 0 0 125px;
+  /*font-family: 'Brandon Grotesque','brandon-grotesque',Helvetica,sans-serif;*/
+  font-size: 15px;
+}
+
+footer a{
+  color: #fff;}
